# InputLink

./: .gitignore  AGENTS.md  CI_GUI_TESTS.md  CLAUDE.md  Makefile  README.md  _scratch_ws_check.py  debug_card_visibility.py  debug_controller_scan.py  debug_controller_scan_flow.py  debug_gui_flow.py  debug_rescan_behavior.py  debug_simple_scan.py  debug_window_visibility.py  main.py  pyproject.toml  test_controller_persistence_fix.py  test_dynamic_controllers.py  test_gui.py  test_gui_functions.py  test_gui_interactions.py  test_gui_rescan_fix.py  test_gui_scanning.py  test_real_controller_scan.py  test_receiver_window.py  test_simple_persistence.py  test_ui_layout_analysis.py  trigger_gui_scan.py
.claude/: settings.local.json
.github/workflows/: build.yml
.kiro/specs/network-controller-forwarding/: design.md
debug/: README.md  debug_card_visibility.py  debug_controller_scan.py  debug_controller_scan_flow.py  debug_gui_flow.py  debug_rescan_behavior.py  debug_simple_scan.py  debug_window_visibility.py  test_controller_persistence_fix.py  test_gui_rescan_fix.py  test_gui_scanning.py  test_real_controller_scan.py  test_simple_persistence.py
docs/: README.md
docs/architecture/: system-overview.md
docs/development/: AGENTS.md  BUILD.md  CLAUDE.md
docs/specifications/: requirements.md  tasks.md
docs/testing/: test-coverage.md  test-scenarios.md  test-strategy.md
docs/user-guide/: README.md
scripts/: README.md  trigger_gui_scan.py
src/input_link/: __init__.py
src/input_link/apps/: __init__.py  gui_main.py  gui_receiver.py  gui_sender.py  receiver.py  sender.py
src/input_link/core/: __init__.py  controller_manager.py  input_capture.py  logging_system.py  performance_monitor.py  resource_manager.py
src/input_link/gui/: __init__.py  application.py  enhanced_widgets.py  main_window.py  receiver_window.py  sender_window.py  theme_manager.py
src/input_link/models/: __init__.py  config.py  controller.py
src/input_link/network/: __init__.py  message_protocol.py  websocket_client.py  websocket_server.py
src/input_link/virtual/: __init__.py  base.py  controller_manager.py  macos.py  windows.py
tests/integration/: test_app_lifecycle.py  test_back_to_main.py  test_controller_scanning.py  test_network_resilience.py  test_receiver_scroll_functionality.py  test_sender_window.py  test_sender_window_scanning.py  test_ui_button_processing.py
tests/unit/: test_controller_manager.py  test_input_capture.py  test_logging_system.py  test_models.py  test_network.py  test_performance_monitor.py  test_resource_manager.py  test_virtual.py
