[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "input-link"
version = "0.1.0"
description = "Network Controller Forwarding System"
authors = [{name = "Input Link Team"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pygame>=2.5.0",
    "websockets>=11.0",
    "pydantic>=2.0.0",
    "pynput>=1.7.6",
    "vgamepad>=0.0.8; sys_platform=='win32'",
    "click>=8.0.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

build = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",  # For icon handling
]

[project.scripts]
input-link-sender = "input_link.apps.sender:main"
input-link-receiver = "input_link.apps.receiver:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "PGH", "PL", "TRY", "FLY", "NPY", "PERF"]
ignore = ["S101", "T201", "T203"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004", "SLF001"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/input_link",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that may require system resources",
    "e2e: End-to-end tests that require full system setup",
    "gui: Tests that require GUI/display environment",
    "slow: Tests that take longer than average to run",
    "asyncio: Tests that use asyncio functionality"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]